# lite-data-platform

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
apps/app_etl/: Dockerfile  README.md  pyproject.toml
apps/app_etl/app_etl/: config.py  sample_ingest.py
apps/app_etl/app_etl/export/: aml_alerts.py
apps/app_etl/app_etl/ingestion/: business_entities.py  business_management.py  ingest_merchants.py  ingest_payments.py  ledger.py  merchants.py  payment_operations.py  payment_v2.py  payments.py  smart_routing.py
apps/app_etl/app_etl/utils/: bq.py  dlt_helpers.py  gcs.py  pg.py  state.py
apps/app_etl/cloudbuild/: pr.yaml  release.yaml
apps/app_etl/dbt/: dbt_project.yml  profiles.yml
apps/app_etl/dbt/macros/: column_or_null.sql  generate_schema_name.sql
apps/app_etl/dbt/models/marts/: _marts.yml  aml_alerts.sql  aml_alerts_008.sql  aml_alerts_014.sql  aml_alerts_015.sql
apps/app_etl/dbt/models/marts/payments/: _payments.yml  payments_daily_summary.sql
apps/app_etl/dbt/models/staging/: _sources.yml  _staging.yml  stg_litecore__payment_operations.sql  stg_litecore__payments.sql
apps/app_etl/dbt/tests/: assert_aml_merchant_features_grain_unique.sql  assert_int_payments__daily_activity_grain_unique.sql  assert_payments_daily_summary_grain_unique.sql
apps/app_etl/scripts/local_source_test/: README.md  _common.py  docker-compose.yml  ingest_business_entities.py  ingest_merchants.py  ingest_payment_operations.py  ingest_payments.py  pipeline.py  seed.sql  seed_merchant_change.py  seed_new_activity.py
apps/app_etl/tests/: test_dbt_parse.py  test_dlt_smoke.py  test_export_alerts.py  test_sample_ingest.py  test_scaffold.py
apps/app_etl/workflows/: daily_pipeline.yaml
apps/app_etl_dlt/: README.md  pyproject.toml
apps/app_etl_dlt/app_etl_dlt/: config.py  runner.py  tables.py
apps/app_etl_dlt/tests/: test_scaffold.py
docs/: dbt-primer.md  runbook.md
