[project]
name = "lite-data-platform"
version = "0.1.0"
description = "Lite data platform monorepo — ingestion, transformation, and analytics apps."
requires-python = ">=3.14"
dependencies = [
    "app-etl",
]

# uv workspace: every app under apps/ is a workspace member sharing one venv
# and one lockfile. Adding an app = new dir under apps/ + entry in [project.dependencies]
# + [tool.uv.sources].
[tool.uv.workspace]
members = ["apps/*"]

[tool.uv.sources]
app-etl = { workspace = true }

[dependency-groups]
dev = [
    "bigframes>=2.45.0",
    "jupyterlab>=4.6.1",
    "pytest>=8",
    "ruff>=0.5",
]

# The root is a workspace aggregator, not a distributable package.
[tool.uv]
package = false

# Exploratory notebooks are scratch work, not CI-gated code.
[tool.ruff]
extend-exclude = ["notebooks"]
