[project]
name = "app-etl"
version = "0.1.0"
description = "Bespoke ingestion jobs: Postgres read replica → GCS (Parquet) → BigQuery."
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.2",
    "pyarrow>=21",
    "google-cloud-storage>=3",
    "google-cloud-bigquery>=3.30",
    "dlt[bigquery,gs,parquet,sql-database]>=1.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app_etl"]
